--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <include src="./partials/1_header.html"></include>
+    <!-- <include src="./partials/1_header.html"></include>
     <include src="./partials/2_hero.html"></include>
     <include src="./partials/3_bespoke.html"></include>
     <include src="./partials/4_cases.html"></include>
-    <include src="./partials/6_blog.html"></include>
+    <include src="./partials/6_blog.html"></include> -->
     <include src="./partials/7_team.html"></include>
-    <include src="./partials/9_callback.html"></include>
+    <!-- <include src="./partials/9_callback.html"></include> -->
     <include src="./partials/footer.html"></include>
   </body>
 </html> 
