attemp use lightbox2

--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,20 @@
     />
     <link rel="stylesheet" href="./sass/index.scss" />
     <title>Ledger</title>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/lightbox-plus-jquery.min.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </head>
   <body>
-    <!-- <include src="./partials/1_header.html"></include>
-    <include src="./partials/2_hero.html"></include>
-    <include src="./partials/3_bespoke.html"></include>
+    <!-- <include src="./partials/1_header.html"></include> -->
+    <!-- <include src="./partials/2_hero.html"></include> -->
+    <!-- <include src="./partials/3_bespoke.html"></include> -->
     <include src="./partials/4_cases.html"></include>
-    <include src="./partials/6_blog.html"></include> -->
-    <include src="./partials/7_team.html"></include>
+    <!-- <include src="./partials/6_blog.html"></include> -->
+    <!-- <include src="./partials/7_team.html"></include> -->
     <!-- <include src="./partials/9_callback.html"></include> -->
-    <include src="./partials/footer.html"></include>
+    <!-- <include src="./partials/footer.html"></include> -->
+
+    <!-- <script type="module" src="./js/jquery-3.6.0.min.js.js"></script> -->
+    <!-- <script type="module" src="./js/lightbox.min.js"></script> -->
   </body>
-</html> 
+</html>
