--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <title>Ledger</title>
-    <script type="module" src="./js/lightbox-plus-jquery.min.js"></script>
     <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/lightbox.min.js"></script>
+    <title>Ledger</title>
   </head>
   <body>
+    
     <!-- <include src="./partials/1_header.html"></include> -->
     <!-- <include src="./partials/2_hero.html"></include> -->
     <!-- <include src="./partials/3_bespoke.html"></include> -->
@@ -23,8 +24,5 @@
     <!-- <include src="./partials/7_team.html"></include> -->
     <!-- <include src="./partials/9_callback.html"></include> -->
     <!-- <include src="./partials/footer.html"></include> -->
-
-    <!-- <script type="module" src="./js/jquery-3.6.0.min.js.js"></script> -->
-    <!-- <script type="module" src="./js/lightbox.min.js"></script> -->
   </body>
 </html>
