--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,14 +16,13 @@
     <title>Ledger</title>
   </head>
   <body>
-    
-    <!-- <include src="./partials/1_header.html"></include> -->
-    <!-- <include src="./partials/2_hero.html"></include> -->
-    <!-- <include src="./partials/3_bespoke.html"></include> -->
+    <include src="./partials/1_header.html"></include>
+    <include src="./partials/2_hero.html"></include>
+    <include src="./partials/3_bespoke.html"></include>
     <include src="./partials/4_cases.html"></include>
-    <!-- <include src="./partials/6_blog.html"></include> -->
-    <!-- <include src="./partials/7_team.html"></include> -->
-    <!-- <include src="./partials/9_callback.html"></include> -->
-    <!-- <include src="./partials/footer.html"></include> -->
+    <include src="./partials/6_blog.html"></include>
+    <include src="./partials/7_team.html"></include>
+    <include src="./partials/9_callback.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
