--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./js/index.js"></script>
-    <script type="module" src="./js/lightbox.min.js"></script>
+    <!-- <script type="module" src="./js/lightbox.min.js"></script> -->
     <title>Ledger</title>
   </head>
   <body>
