--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
     <!-- <include src="./partials/4_cases.html"></include> -->
     <!-- <include src="./partials/6_blog.html"></include> -->
     <!-- <include src="./partials/7_team.html"></include> -->
-    <include src="./partials/9_callback.html"></include>
+    <!-- <include src="./partials/9_callback.html"></include> -->
+    <include src="./partials/9_callback_.html"></include>
     <!-- <include src="./partials/footer.html"></include> -->
     <!-- <include src="./partials/restore.html"></include> -->
   </body>
