#2 rename files & urls, cursor:pointer 4 links

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <include src="./partials/4_cases.html"></include>
     <include src="./partials/5_blog.html"></include>
     <include src="./partials/6_team.html"></include>
-    <include src="./partials/7_callback.html"></include>
+    <include src="./partials/7_contact.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
