#3 build sprite&correct size team photos 4 dt,dry

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,6 @@
     <include src="./partials/5_blog.html"></include>
     <include src="./partials/6_team.html"></include>
     <include src="./partials/7_contact.html"></include>
-    <include src="./partials/footer.html"></include>
+    <include src="./partials/8_footer.html"></include>
   </body>
 </html>
