--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
   <body>
     <include src="./partials/1_header.html"></include>
     <include src="./partials/2_hero.html"></include>
-    <!-- <include src="./partials/3_about.html"></include> -->
-    <!-- <include src="./partials/4_cases.html"></include> -->
-    <!-- <include src="./partials/5_blog.html"></include> -->
-    <!-- <include src="./partials/6_team.html"></include> -->
-    <!-- <include src="./partials/7_contact.html"></include> -->
-    <!-- <include src="./partials/8_footer.html"></include> -->
+    <include src="./partials/3_about.html"></include>
+    <include src="./partials/4_cases.html"></include>
+    <include src="./partials/5_blog.html"></include>
+    <include src="./partials/6_team.html"></include>
+    <include src="./partials/7_contact.html"></include>
+    <include src="./partials/8_footer.html"></include>
   </body>
 </html>
